# Interactive_card

./: .stylelintrc.json  README.md  index.html  package-lock.json  package.json  pyproject.toml  setup.cfg  tsconfig.json
css/: home.css  home.css.map
js/: script.js  test.js
scss/home/: _main.scss  _mediaqueries.scss  home.scss
scss/partials/assembler/: _debug.scss  _general.scss  _index.scss  _normalize.scss  _reset.scss  _root.scss  _typography.scss
scss/partials/structure/: _footer.scss  _header.scss
scss/partials/tools/: _functions.scss  _index.scss  _mixins.scss  _placeholders.scss  _variables.scss
ts/: script.ts
