[project]
name = "interactive-card"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "python-multipart>=0.0.20",
    "rich>=13.9.4",
    "ruff>=0.9.1",
    "uvicorn>=0.34.0",
]
